# cossacks-btw-mod

./: .gitignore  CMakeLists.txt  CMakeLists_fixed.txt  CMakeLists_minimal.txt  CMakeLists_test.txt  RAYLIB_MIGRATION_PROGRESS.md  instructions.txt
build_cross_platform/: ALL_BUILD.vcxproj  CMakeCache.txt  Cossacks_Raylib.sln  Cossacks_Raylib.vcxproj  Cossacks_Raylib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_minimal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Cossacks_Raylib.sln  Cossacks_Raylib.vcxproj  Cossacks_Raylib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_minimal/Cossacks_Raylib.dir/Debug/Cossacks_Raylib.tlog/: CL.command.1.tlog  CustomBuild.write.1.tlog
build_minimal/Cossacks_Raylib.dir/Release/Cossacks_Raylib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_minimal/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_minimal/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
build_minimal/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_minimal/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build_singleplayer/: ALL_BUILD.vcxproj  CMakeCache.txt  Cossacks_Raylib.sln  Cossacks_Raylib.vcxproj  Cossacks_Raylib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_singleplayer/Cossacks_Raylib.dir/Release/Cossacks_Raylib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cossacks_Raylib.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_singleplayer/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_singleplayer/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: raylib_main.cpp
src/CommCore library/: CommCore.cpp  CommCore.h  CommInet.cpp
src/IChat library/: GSC_ChatWindow.cpp  StdAfx.h  cs_chat.h  nonport.h
src/IChat library/Chat/: chatCallbacks.h
src/IntExplorer library/: DataXchange.cpp  IntExplorer.cpp  IntExplorer.h  PingEngine.cpp  StdAfx.h
src/Main executable/: AntiBug.cpp  Cdirsnd.cpp  Cdirsnd.h  ConstStr.cpp  Cossacks.vcxproj  Cwave.cpp  Cwave.h  Ddex1.cpp  Ddini.h  Dialogs.cpp  ExConst.cpp  Interface.cpp  MapDiscr.h  Megapolis.cpp  Mplayer.h  Multipl.h  NewILogin.cpp  NewMon.h  Nonport.h  Pinger.h  PlayerInfo.h  Resfile.cpp  Stringshash.cpp  UnRar.cpp  common.h  gText.cpp  mapa.cpp  stubs.cpp
src/Main executable/Arc/: GSCtypes.h  isiMasks.cpp
src/Main executable/HTTP/: HttpComm.cpp
src/Main executable/NewCode/: QueueManagement.cpp  SecureDivision.cpp  UdpHolePuncher.h
src/Temp/: CommCore.lib  IChat.exp  IChat.lib  IntExplorer.exp  IntExplorer.lib  dmcr.exp  dmcr.lib
src/Temp/CommCore/: vc143.idb
src/Temp/CommCore/CommCore library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog
src/Temp/IChat/: IChat.dll.recipe  IChat.iobj
src/Temp/IChat/IChat library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/Temp/IntExplorer/: IntExplorer.dll.recipe  IntExplorer.iobj  vc143.idb
src/Temp/IntExplorer/IntExplo.90C182BD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/Temp/dmcr/: Script1.res  dmcr.exe.recipe  dmcr.iobj
src/Temp/dmcr/Cossacks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Cossacks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
src/audio/: raylib_audio.cpp  raylib_audio.h  raylib_audio_compat.cpp  raylib_audio_compat.h
src/cross_platform/: platform_compat.cpp  platform_compat.h
src/graphics/: directdraw_compat.cpp  directdraw_compat.h  raylib_graphics.cpp  raylib_graphics.h
src/input/: raylib_input.cpp  raylib_input.h
src/raylib_system/: raylib_window.cpp  raylib_window.h
src/utils/: raylib_utils.cpp  raylib_utils.h
